--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
-        font-size: 11px;
+        font-size: 0.6875rem;
         text-align: center;
-        padding: 1em;
       }
       .attribution a {
         color: hsl(240, 100%, 15%);
@@ -54,11 +53,13 @@
         >
       </section>
     </main>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Wisdom Njimogu</a>.
-    </div>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Wisdom Njimogu</a>.
+      </div>
+    </footer>
   </body>
 </html>
